--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,13 +12,7 @@ zuul.routes.hello-service.serviceId=hello-service
 zuul.retryable=true
 
 # eureka服务注册中心地址
-eureka.client.serviceUrl.defaultZone=http://localhost:8001/eureka/
+eureka.client.serviceUrl.defaultZone=${REPLICA_URLS:http://localhost:8001/eureka}
 eureka.client.register-with-eureka=false
 
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
-
-ribbon.ConnectTimeout=3000
-ribbon.ReadTimeout=3000
-ribbon.OkToRetryOnAllOperations=true
-ribbon.MaxAutoRetries=1
-ribbon.MaxAutoRetriesNextServer=1
