--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=9000
 
 # 服务名
 spring.application.name=api
@@ -8,11 +8,19 @@ zuul.prefix=/api
 zuul.routes.hello-service.path=/hello/**
 zuul.routes.hello-service.serviceId=hello-service
 
+#zuul.routes.ee-service.path=/hello/**
+#zuul.routes.ee-service.serviceId=hello-service
+#ribbon.eureka.enabled=false
+#hello-service.ribbon.listOfServers=http://localhost:8080,http://localhost:8081,http://localhost:8082
+
+
 # 开启重试机制
 zuul.retryable=true
 
 # eureka服务注册中心地址
-eureka.client.serviceUrl.defaultZone=${REPLICA_URLS:http://localhost:8001/eureka}
+eureka.client.serviceUrl.defaultZone=${REPLICA_URLS:http://localhost:8761/eureka}
 eureka.client.register-with-eureka=false
+
+management.endpoints.web.exposure.include=*
 
 #hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
